--- a/README.rdoc
+++ b/README.rdoc
@@ -10,6 +10,12 @@ Open a file in your edit with line number. It provides the command 'edit'.
 
   $ edit /path/to/foo.rb:10
 
+== Supported Editors
+
+Please see here: https://github.com/jugyo/edit/tree/master/lib/edit
+
+And please patches to support more editors!
+
 == Copyright
 
 Copyright (c) 2011 jugyo. See LICENSE.txt for further details.
